favicon and font updated

--- a/_sass/layout/_base.scss
+++ b/_sass/layout/_base.scss
@@ -15,7 +15,7 @@ body {
   margin: 0;
   padding: $masthead-height 0 0;
   padding-bottom: 9em;
-  font-family: $global-font-family;
+  font-family: 'Roboto', sans-serif;
   line-height: 1.5;
 
   &.overflow--hidden {
