--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -42,7 +42,10 @@
 
   h2, h3, h4, h5, h6 {
     margin-bottom: 0;
-    font-family: $sans-serif-narrow;
+      // font-family: $sans-serif;
+      font-family: 'Roboto', sans-serif;
+
+
   }
 
   h3, h4 {
@@ -50,7 +53,9 @@
   }
 
   p, li {
-    font-family: $sans-serif;
+    // font-family: $sans-serif;
+    font-family: 'Roboto', sans-serif;
+
     font-size: $type-size-6;
     line-height: 1.5;
   }
@@ -128,7 +133,9 @@
   }
 }
 .sidebar .author__name {
-  font-family: $sans-serif;
+  // font-family: $sans-serif;
+  font-family: 'Roboto', sans-serif;
+
   font-size: $type-size-5;
 }
 
@@ -161,7 +168,9 @@
   position: relative;
   display: table-cell;
   vertical-align: middle;
-  font-family: $sans-serif;
+  // font-family: $sans-serif;
+  font-family: 'Roboto', sans-serif;
+
   z-index: 10;
   position: relative;
   cursor: pointer;
